chore(README): Update readme to reflect switch to Java 11
- Remove reference to deprecated memory management JVM options.